--- a/app/assets/stylesheets/places.scss
+++ b/app/assets/stylesheets/places.scss
@@ -1,7 +1,35 @@
 #map {
-	 position:absolute; 
-	 top:  77px; 
-	 bottom:0; 
-	 left:0; 
-	 right: 0; 
+	position: absolute;
+	left: 0;
+	top: 3px;
+	bottom: 0;
+	right: 0;
+	min-height: 100px;
 }
+
+.breadcrumb {
+	font-size: 11px;
+	font-weight: normal;
+	margin: 0;
+	padding: 0;
+}
+
+.breadcrumb li {
+	display: inline;
+	margin: 0;
+	padding: 0;
+}
+
+.breadcrumb li + li::before {
+	content: "» ";
+}
+
+.breadcrumb li a {
+	text-decoration: none;
+	color: #000;
+}
+
+.breadcrumb li a:hover {
+	text-decoration: underline;
+}
+
